making the resume

--- a/cv-sections/education.tex
+++ b/cv-sections/education.tex
@@ -13,13 +13,15 @@
 %------------------------------------------------
 
 \cventry
-{B.S. in Computer Science and Engineering} % Degree
-{POSTECH(Pohang University of Science and Technology)} % Institution
-{Pohang, S.Korea} % Location
-{Mar. 2010 - PRESENT} % Date(s)
+{B.S. in Computer Science} % Degree
+{University of Utah} % Institution
+{Salt Lake City, UT} % Location
+{August 2019 - May 2023} % Date(s)
 { % Description(s) bullet points
 \begin{cvitems}
-\item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+\item {3.65 GPA}
+\item {Spring/Fall, 2019-2023 - Dean's List}
+\item {Spring/Fall, 2019-2023 - Honor Roll}
 \end{cvitems}
 }
 
