--- a/cv-sections/skills.tex
+++ b/cv-sections/skills.tex
@@ -14,20 +14,13 @@
 
 \cvskill
 {Programming} % Category
-{Python, C/C++, Scala, JAVA, Node.JS, OCaml, LaTeX} % Skills
+{Java, C\#, Python, Go, JavaScript, TypeScript, AWS, GitHub, Azure DevOps, Docker, MySQL, Bootstrap, ReactJS, ASP.Net Core, Selenium Web Driver} % Skills
 
 %------------------------------------------------
 
 \cvskill
-{Web} % Category
-{Django with Python, Express with Node.JS, HTML5, LESS} % Skills
-
-%------------------------------------------------
-
-\cvskill
-{Languages} % Category
-{Korean, English, Japanese, Chinese} % Skills
-
+{Soft Skills} % Category
+{Strong leadership, communication skills, and critical thinking ability. Willing to learn new skills and am excited for new opportunities to learn.}
 %------------------------------------------------
 
 \end{cvskills}
