--- a/cv-sections/extracurricular.tex
+++ b/cv-sections/extracurricular.tex
@@ -2,7 +2,7 @@
 %	SECTION TITLE
 %----------------------------------------------------------------------------------------
 
-\cvsection{Extracurricular Activity}
+\cvsection{Projects}
 
 %----------------------------------------------------------------------------------------
 %	SECTION CONTENT
@@ -14,72 +14,31 @@
 
 \cventry
 {Core Member} % Affiliation/role
-{B10S (B1t 0n the Security, Underground hacker team)} % Organization/group
-{S.Korea} % Location
-{Nov. 2011 - PRESENT} % Date(s)
+{Huddle Up} % Organization/group
+{Salt Lake City, UT} % Location
+{Aug 2022 - May 2023} % Date(s)
 { % Description(s) of experience/contributions/knowledge
 \begin{cvitems}
-\item {Gained expertise in penetration testing areas, especially targeted on web application and software.}
-\item {Participated on a lot of hacking competition and won a good award.}
-\item {Held several hacking competitions non-profit, just for fun.}
+\item {Developed a group fantasy football web application focused on enhancing the team aspect of fantasy sports.}
+\item {Utilized React for building the frontend, with Tailwind CSS and Mantine for responsive and modern styling.}
+\item {Implemented a robust backend using Node.js, leveraging TypeScript for type safety and maintainable code.}
+\item {Designed and integrated a MySQL database using Prisma ORM for efficient data modeling and management.}
+\item {Managed version control and collaborative development using GitLab, ensuring seamless integration and deployment.}
 \end{cvitems}
 }
 
 %------------------------------------------------
 
 \cventry
-{Member} % Affiliation/role
-{WiseGuys (Hacking \& Security research group)} % Organization/group
-{S.Korea} % Location
-{Jun. 2012 - PRESENT} % Date(s)
+{Core Member} % Affiliation/role
+{Room Reserver} % Organization/group
+{Salt Lake City, UT} % Location
+{Aug 2022 - May 2023} % Date(s)
 { % Description(s) of experience/contributions/knowledge
 \begin{cvitems}
-\item {Gained expertise in hardware hacking areas from penetration testing on several devices including wireless router, smartphone, CCTV and set-top box.}
-\item {Trained wannabe hacker about hacking technique from basic to advanced and ethics for white hackers by hosting annual Hacking Camp.}
-\end{cvitems}
-}
-
-%------------------------------------------------
-
-\cventry
-{Core Member \& President at 2013} % Affiliation/role
-{PoApper (Developers' Network of POSTECH)} % Organization/group
-{Pohang, S.Korea} % Location
-{Jun. 2010 - PRESENT} % Date(s)
-{ % Description(s) of experience/contributions/knowledge
-\begin{cvitems}
-\item {Reformed the society focusing on software engineering and building network on and off campus.}
-\item {Proposed various marketing and network activities to raise awareness.}
-\end{cvitems}
-}
-
-%------------------------------------------------
-
-\cventry
-{Member} % Affiliation/role
-{PLUS (Laboratory for UNIX Security in POSTECH)} % Organization/group
-{Pohang, S.Korea} % Location
-{Sep. 2010 - Oct. 2011} % Date(s)
-{ % Description(s) of experience/contributions/knowledge
-\begin{cvitems}
-\item {Gained expertise in hacking \& security areas, especially about internal of operating system based on UNIX and several exploit techniques.}
-\item {Participated on several hacking competition and won a good award.}
-\item {Conducted periodic security checks on overall IT system as a member of POSTECH CERT.}
-\item {Conducted penetration testing commissioned by national agency and corporation.}
-\end{cvitems}
-}
-
-%------------------------------------------------
-
-\cventry
-{Member} % Affiliation/role
-{MSSA (Management Strategy Club of POSTECH)} % Organization/group
-{Pohang, S.Korea} % Location
-{Sep. 2013 - PRESENT} % Date(s)
-{ % Description(s) of experience/contributions/knowledge
-\begin{cvitems}
-\item {Gained knowledge about several business field like Management, Strategy, Financial and marketing from group study.}
-\item {Gained expertise in business strategy areas and inisght for various industry from weekly industry analysis session.}
+\item {Developed a web scraper using Selenium Web Driver in JavaScript to automate daily reservations of study rooms at the University of Utah Marriott Library.}
+\item {Deployed the application on an Amazon EC2 instance for consistent and reliable automated scheduling.}
+\item {Streamlined the reservation process by automating repetitive tasks, saving time and ensuring availability of study spaces.}
 \end{cvitems}
 }
 
