--- a/resume_cv.tex
+++ b/resume_cv.tex
@@ -47,14 +47,14 @@
 %	Comment any of the lines below if they are not required
 %----------------------------------------------------------------------------------------
 
-\name{Claud D.}{Park}
-\address{246-1002, Gwangmyeongmayrouge Apt. 86, Cheongna lime-ro, Seo-gu, Incheon-si, 404-180, Rep. of KOREA}
-\mobile{(+82) 10-9030-1843}
+\name{Justin D.}{Perez}
+\address{1133 E 200 S, Salt Lake City, UT 84102}
+\mobile{(+1) 770-778-0722}
 
-\email{posquit0.bj@gmail.com}
-\homepage{www.posquit0.com}
-\github{posquit0}
-\linkedin{posquit0}
+\email{justinprz12@gmail.com}
+\homepage{www.justindavidperez.com}
+\github{JustinPerez12}
+\linkedin{justindperez}
 %\skype{skypeid}
 %\stackoverflow{SOid}{SOname}
 %\twitter{@twit}
@@ -63,10 +63,9 @@
 %\xing{xing name}
 %\extrainfo{test} % Other text you want to include on this line
 
-\position{Software Engineer{\enskip\cdotp\enskip}Security Expert} % Your expertise/fields
-\quote{``Make the change that you want to see in the world."} % A quote or statement
+\position{Software Engineer 1} % Your expertise/fields
 
-\makecvfooter{\today}{Claud D. Park~~~·~~~Résumé}{\thepage} % Specify the letter footer with 3 arguments: (<left>, <center>, <right>), leave any of these blank if they are not needed
+\makecvfooter{\today}{Justin D. Perez~~~·~~~Résumé}{\thepage} % Specify the letter footer with 3 arguments: (<left>, <center>, <right>), leave any of these blank if they are not needed
 
 %----------------------------------------------------------------------------------------
 
@@ -82,14 +81,14 @@
 \input{cv-sections/education.tex}
 \input{cv-sections/skills.tex}
 \input{cv-sections/experience.tex}
-
-\newpage % Force a new page for looks
-
 \input{cv-sections/extracurricular.tex}
-\input{cv-sections/honors.tex}
-\input{cv-sections/presentation.tex}
-\input{cv-sections/writing.tex}
-\input{cv-sections/committees.tex}
+
+%\newpage % Force a new page for looks
+
+%\input{cv-sections/honors.tex}
+%\input{cv-sections/presentation.tex}
+%\input{cv-sections/writing.tex}
+%\input{cv-sections/committees.tex}
 
 %----------------------------------------------------------------------------------------
 
