add some numbers and remove address

--- a/Justin_Perez_Resume.tex
+++ b/Justin_Perez_Resume.tex
@@ -47,8 +47,7 @@
 %	Comment any of the lines below if they are not required
 %----------------------------------------------------------------------------------------
 
-\name{Justin D.}{Perez}
-\address{1133 E 200 S, Salt Lake City, UT 84102}
+\name{}{Justin D. Perez}
 \mobile{(+1) 770-778-0722}
 
 \email{justinprz12@gmail.com}
@@ -63,7 +62,7 @@
 %\xing{xing name}
 %\extrainfo{test} % Other text you want to include on this line
 
-\position{Software Engineer 1} % Your expertise/fields
+\position{Software Engineer} % Your expertise/fields
 
 \makecvfooter{\today}{Justin D. Perez~~~·~~~Résumé}{\thepage} % Specify the letter footer with 3 arguments: (<left>, <center>, <right>), leave any of these blank if they are not needed
 
@@ -78,9 +77,9 @@
 %	Each section is imported separately, open each file in turn to modify content
 %----------------------------------------------------------------------------------------
 
-\input{cv-sections/education.tex}
-\input{cv-sections/skills.tex}
 \input{cv-sections/experience.tex}
+\input{cv-sections/skills.tex}
+\input{cv-sections/education.tex}
 \input{cv-sections/extracurricular.tex}
 
 %\newpage % Force a new page for looks
