--- a/cv-sections/experience.tex
+++ b/cv-sections/experience.tex
@@ -19,10 +19,10 @@
 {June 2023 - Current} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
-\item {Developed and maintained enterprise-level security software used by multiple software teams across the company.}
-\item {Integrated security solutions with industry-leading vendors, including Veracode and Aqua.}
-\item {Designed and implemented tools that generate comprehensive security status reports for software components.}
-\item {Streamlined integration with security tools by creating simplified upload processes and efficient defect retrieval methods.}
+\item {Developed and maintained enterprise-level security software used by hundreds of software teams across the company.}
+\item {Streamlined integration with security tools by creating simplified upload processes and efficient defect retrieval methods. Increased security adoption by over 40\%.}
+\item {Designed and implemented tools that generate comprehensive security status reports for more than 7,500 software components.}
+\item {Integrated security solutions with industry-leading vendors, including Veracode, NoName, and Wiz.}
 \item {Enhanced the overall security workflow, improving the user experience for software teams and optimizing security practices across the organization.}
 \end{cvitems}
 }
