fix some more stuff

--- a/cv-sections/education.tex
+++ b/cv-sections/education.tex
@@ -16,7 +16,7 @@
 {B.S. in Computer Science} % Degree
 {University of Utah} % Institution
 {Salt Lake City, UT} % Location
-{August 2019 - May 2023} % Date(s)
+{Graduated May 2023} % Date(s)
 { % Description(s) bullet points
 \begin{cvitems}
 \item {Spring/Fall, 2019-2023 - Dean's List}
