--- a/cv-sections/skills.tex
+++ b/cv-sections/skills.tex
@@ -14,7 +14,7 @@
 
 \cvskill
 {Programming} % Category
-{Java, C\#, Python, Go, JavaScript, TypeScript, AWS, GitHub, Azure DevOps, Docker, MySQL, Bootstrap, ReactJS, ASP.Net Core, Selenium Web Driver} % Skills
+{Java, C\#, Python, Go, JavaScript, TypeScript, AWS, Terraform, GitHub, Azure DevOps, Docker, MySQL, Bootstrap, ReactJS, ASP.Net Core, Selenium Web Driver} % Skills
 
 %------------------------------------------------
 
