fix up resume a bit more with more details

--- a/Justin_Perez_Resume.tex
+++ b/Justin_Perez_Resume.tex
@@ -48,7 +48,6 @@
 %----------------------------------------------------------------------------------------
 
 \name{}{Justin D. Perez}
-\mobile{(+1) 770-778-0722}
 
 \email{justinprz12@gmail.com}
 \homepage{www.justindavidperez.com}
@@ -62,7 +61,7 @@
 %\xing{xing name}
 %\extrainfo{test} % Other text you want to include on this line
 
-\position{Software Engineer} % Your expertise/fields
+\position{Full Stack Software Engineer} % Your expertise/fields
 
 \makecvfooter{\today}{Justin D. Perez~~~·~~~Résumé}{\thepage} % Specify the letter footer with 3 arguments: (<left>, <center>, <right>), leave any of these blank if they are not needed
 
