--- a/cv-sections/experience.tex
+++ b/cv-sections/experience.tex
@@ -20,10 +20,26 @@
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
 \item {Developed and maintained enterprise-level security software used by hundreds of software teams across the company.}
+\item {Built reporting ETL jobs leveraging Cloudwatch Events, ECS Fargate, Lambda, and more.}
+\item {Developed and maintained a graph database, levering Neptune, storing thousands of interconnected entities, including security vulnerabilities, software components, teams, and users, to streamline data accessibility and support security workflows.}
 \item {Increased security adoption at Cox Automotive by over 40\% by creating simplified upload processes and efficient defect retrieval methods.}
 \item {Designed and implemented tools that generate comprehensive security status reports for more than 7,500 software components.}
 \item {Integrated security solutions with industry-leading vendors, including Veracode, NoName, and Wiz.}
 \item {Enhanced the overall security workflow, improving the user experience for software teams and optimizing security practices across the organization.}
+\end{cvitems}
+}
+
+%------------------------------------------------
+
+\cventry
+{Software Engineer} % Job title
+{Campus Core} % Organization
+{Remote} % Location
+{November 2024 - Current} % Date(s)
+{ % Description(s) of tasks/responsibilities
+\begin{cvitems}
+\item {Built backend services on Azure, providing secure, scalable, and real-time access to educational resources for up to 2,000 students.}
+\item {Conceptualized and developed a scalable educational platform for universities, enhancing student-advisor communications using React, React Native, Tailwind, Node.js, Azure, and MySQL.}
 \end{cvitems}
 }
 
