--- a/cv-sections/extracurricular.tex
+++ b/cv-sections/extracurricular.tex
@@ -29,18 +29,18 @@
 
 %------------------------------------------------
 
-\cventry
-{Core Member} % Affiliation/role
-{Room Reserver} % Organization/group
-{Salt Lake City, UT} % Location
-{Aug 2022 - May 2023} % Date(s)
-{ % Description(s) of experience/contributions/knowledge
-\begin{cvitems}
-\item {Developed a web scraper using Selenium Web Driver in JavaScript to automate daily reservations of study rooms at the University of Utah Marriott Library.}
-\item {Deployed the application on an Amazon EC2 instance for consistent and reliable automated scheduling.}
-\item {Streamlined the reservation process by automating repetitive tasks, saving time and ensuring availability of study spaces.}
-\end{cvitems}
-}
+% \cventry
+% {Core Member} % Affiliation/role
+% {Room Reserver} % Organization/group
+% {Salt Lake City, UT} % Location
+% {Aug 2022 - May 2023} % Date(s)
+% { % Description(s) of experience/contributions/knowledge
+% \begin{cvitems}
+% \item {Developed a web scraper using Selenium Web Driver in JavaScript to automate daily reservations of study rooms at the University of Utah Marriott Library.}
+% \item {Deployed the application on an Amazon EC2 instance for consistent and reliable automated scheduling.}
+% \item {Streamlined the reservation process by automating repetitive tasks, saving time and ensuring availability of study spaces.}
+% \end{cvitems}
+% }
 
 %------------------------------------------------
 
