--- a/cv-sections/skills.tex
+++ b/cv-sections/skills.tex
@@ -13,8 +13,14 @@
 %------------------------------------------------
 
 \cvskill
-{Programming} % Category
-{Java, C\#, Python, Go, JavaScript, TypeScript, AWS, Terraform, GitHub, Azure DevOps, Docker, MySQL, Bootstrap, ReactJS, ASP.Net Core, Selenium Web Driver} % Skills
+{Software} % Category
+{Java, C\#, Python, Go, JavaScript, TypeScript, Terraform, GitHub, Azure DevOps, Docker, MySQL, Bootstrap, ReactJS, ASP.Net Core, Selenium Web Driver} % Skills
+
+%------------------------------------------------
+
+\cvskill
+{AWS} % Category
+{Lambda, ECS Fargate, ECR, DynamoDB, CloudWatch, CodeBuild, S3, Neptune} % Skills
 
 %------------------------------------------------
 
