--- a/cv-sections/education.tex
+++ b/cv-sections/education.tex
@@ -12,16 +12,12 @@
 
 %------------------------------------------------
 
-\cventry
+\cventryeducation
 {B.S. in Computer Science} % Degree
 {University of Utah} % Institution
 {Salt Lake City, UT} % Location
-{Graduated May 2023} % Date(s)
-{ % Description(s) bullet points
-\begin{cvitems}
-\item {Spring/Fall, 2019-2023 - Dean's List}
-\item {Spring/Fall, 2019-2023 - Honor Roll}
-\end{cvitems}
+{August 2019 - May 2023} % Date(s)
+{% Description(s) bullet points
 }
 
 %------------------------------------------------
