--- a/cv-sections/experience.tex
+++ b/cv-sections/experience.tex
@@ -22,7 +22,7 @@
 \item {Developed and maintained enterprise-level security software used by hundreds of software teams across the company.}
 \item {Built reporting ETL jobs leveraging Cloudwatch Events, ECS Fargate, Lambda, and more.}
 \item {Developed and maintained a graph database, levering NeptuneDB, storing thousands of interconnected entities, including security vulnerabilities, software components, teams, and users, to streamline data accessibility and support security workflows.}
-\item {Increased security adoption of overall compoany inventory at Cox Automotive from 10\% to over 45\% by creating simplified upload processes and efficient defect retrieval methods.}
+\item {Increased security adoption of overall company inventory at Cox Automotive from 10\% to over 45\% by creating simplified upload processes and efficient defect retrieval methods.}
 \item {Designed and implemented tools that generate comprehensive security status reports for more than 7,500 software components.}
 \item {Integrated security solutions with industry-leading vendors, including Veracode, NoName, and Wiz.}
 \item {Enhanced the overall security workflow, improving the user experience for software teams and optimizing security practices across the organization.}
