update campus core

--- a/cv-sections/experience.tex
+++ b/cv-sections/experience.tex
@@ -39,8 +39,8 @@
 {November 2024 - Current} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
-\item {Built backend services on Azure, providing secure, scalable, and real-time access to educational resources for up to 2,000 students.}
-\item {Conceptualized and developed a scalable educational platform for universities, enhancing student-advisor communications using React, React Native, Tailwind, Node.js, Azure, and MySQL.}
+\item {Developed a mobile application using React Native and the Fluent Component Library.}
+\item {Built a backend system leveraging Node.js, seamlessly integrated with a PostgreSQL database hosted on Azure.}
 \end{cvitems}
 }
 
