make changes for for campus core

--- a/cv-sections/experience.tex
+++ b/cv-sections/experience.tex
@@ -40,7 +40,7 @@
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
 \item {Developed a mobile application using React Native and the Fluent Component Library.}
-\item {Built a backend system leveraging Node.js, seamlessly integrated with a PostgreSQL database hosted on Azure.}
+\item {Built a backend system leveraging Node.js, seamlessly integrated with a PostgreSQL database hosted on Azure. Levered Prisma ORM to increase speed in development, and mitigate SQL injection risk.}
 \end{cvitems}
 }
 
