--- a/cv-sections/experience.tex
+++ b/cv-sections/experience.tex
@@ -41,6 +41,7 @@
 \begin{cvitems}
 \item {Developed a mobile application using React Native and the Fluent Component Library.}
 \item {Built a backend system leveraging Node.js, seamlessly integrated with a PostgreSQL database hosted on Azure. Levered Prisma ORM to increase speed in development, and mitigate SQL injection risk.}
+\item {Backed by Microsoft for Startups.}
 \end{cvitems}
 }
 
