fix type and change workding

--- a/cv-sections/experience.tex
+++ b/cv-sections/experience.tex
@@ -21,7 +21,7 @@
 \begin{cvitems}
 \item {Developed and maintained enterprise-level security software used by hundreds of software teams across the company.}
 \item {Built reporting ETL jobs leveraging Cloudwatch Events, ECS Fargate, Lambda, and more.}
-\item {Developed and hosted a front-end web application using React.js and CloudFront, paired with a C\# API hosted in Amazon ECS. The application enables users to monitor their security posture, customize team vulnerability settings, and track application vulnerabilities.}
+\item {Developed and maintained a front-end web application using React.js and CloudFront, paired with a C\# API hosted in Amazon ECS. The application enables users to monitor their security posture, customize team vulnerability settings, and track application vulnerabilities.}
 \item {Developed and maintained a graph database, levering NeptuneDB, storing thousands of interconnected entities, including security vulnerabilities, software components, teams, and users, to streamline data accessibility and support security workflows.}
 \item {Increased security adoption of overall company inventory at Cox Automotive from 10\% to over 45\% by creating simplified upload processes and efficient defect retrieval methods.}
 \item {Designed and implemented tools that generate comprehensive security status reports for more than 7,500 software components.}
@@ -40,7 +40,7 @@
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
 \item {Developed a mobile application using React Native and the Fluent Component Library.}
-\item {Built a backend system leveraging Node.js, seamlessly integrated with a PostgreSQL database hosted on Azure. Levered Prisma ORM to increase speed in development, and mitigate SQL injection risk.}
+\item {Built a backend system leveraging Node.js, seamlessly integrated with a PostgreSQL database hosted on Azure. Leveraged Prisma ORM to increase speed in development, and mitigate SQL injection risk.}
 \item {Backed by Microsoft for Startups.}
 \end{cvitems}
 }
